# voucher/docs/v1/query.swagger.json
@@ -11,6 +11,187 @@
     "application/json"
   ],
   "paths": {
+    "/chora/voucher/v1/balance/{id}/{address}": {
+      "get": {
+        "summary": "Balance queries the balance of a voucher and address.",
+        "operationId": "Balance",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/chora.voucher.v1.QueryBalanceResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/grpc.gateway.runtime.Error"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "description": "id is the unique identifier of the voucher.",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "address",
+            "description": "address is the address of the voucher owner.",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "Query"
+        ]
+      }
+    },
+    "/chora/voucher/v1/balances/{address}": {
+      "get": {
+        "summary": "BalancesByAddress queries all balances of an address.",
+        "operationId": "BalancesByAddress",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/chora.voucher.v1.QueryBalancesByAddressResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/grpc.gateway.runtime.Error"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "address",
+            "description": "address is the address of the voucher owner.",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "pagination.key",
+            "description": "key is a value returned in PageResponse.next_key to begin\nquerying the next page most efficiently. Only one of offset or key\nshould be set.",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "byte"
+          },
+          {
+            "name": "pagination.offset",
+            "description": "offset is a numeric offset that can be used when key is unavailable.\nIt is less efficient than using key. Only one of offset or key should\nbe set.",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "pagination.limit",
+            "description": "limit is the total number of results to be returned in the result page.\nIf left empty it will default to a value to be set by each app.",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "pagination.count_total",
+            "description": "count_total is set to true  to indicate that the result set should include\na count of the total number of items available for pagination in UIs.\ncount_total is only respected when offset is used. It is ignored when key\nis set.",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
+          },
+          {
+            "name": "pagination.reverse",
+            "description": "reverse is set to true if results are to be returned in the descending order.\n\nSince: cosmos-sdk 0.43",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
+          }
+        ],
+        "tags": [
+          "Query"
+        ]
+      }
+    },
+    "/chora/voucher/v1/balances/{id}": {
+      "get": {
+        "summary": "BalancesByVoucher queries all balances of a voucher.",
+        "operationId": "BalancesByVoucher",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/chora.voucher.v1.QueryBalancesByVoucherResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/grpc.gateway.runtime.Error"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "description": "id is the unique identifier of the voucher.",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "pagination.key",
+            "description": "key is a value returned in PageResponse.next_key to begin\nquerying the next page most efficiently. Only one of offset or key\nshould be set.",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "byte"
+          },
+          {
+            "name": "pagination.offset",
+            "description": "offset is a numeric offset that can be used when key is unavailable.\nIt is less efficient than using key. Only one of offset or key should\nbe set.",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "pagination.limit",
+            "description": "limit is the total number of results to be returned in the result page.\nIf left empty it will default to a value to be set by each app.",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "pagination.count_total",
+            "description": "count_total is set to true  to indicate that the result set should include\na count of the total number of items available for pagination in UIs.\ncount_total is only respected when offset is used. It is ignored when key\nis set.",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
+          },
+          {
+            "name": "pagination.reverse",
+            "description": "reverse is set to true if results are to be returned in the descending order.\n\nSince: cosmos-sdk 0.43",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
+          }
+        ],
+        "tags": [
+          "Query"
+        ]
+      }
+    },
     "/chora/voucher/v1/voucher/{id}": {
       "get": {
         "summary": "Voucher queries a voucher by id.",
@@ -179,6 +360,119 @@
     }
   },
   "definitions": {
+    "chora.voucher.v1.QueryBalanceResponse": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "uint64",
+          "description": "id is the unique identifier of the voucher."
+        },
+        "address": {
+          "type": "string",
+          "description": "address is the address of the voucher owner."
+        },
+        "total_amount": {
+          "type": "string",
+          "description": "total_amount is the total amount the address owns."
+        },
+        "amounts": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/chora.voucher.v1.QueryBalanceResponse.Amount"
+          },
+          "description": "amounts is the list of amounts with expiration."
+        }
+      },
+      "description": "QueryBalanceResponse is the Query/Balance response type."
+    },
+    "chora.voucher.v1.QueryBalanceResponse.Amount": {
+      "type": "object",
+      "properties": {
+        "amount": {
+          "type": "string",
+          "description": "amount is the amount of vouchers."
+        },
+        "expiration": {
+          "type": "string",
+          "format": "date-time",
+          "description": "expiration is the expiration of the voucher."
+        }
+      },
+      "description": "Amount is the amount with expiration."
+    },
+    "chora.voucher.v1.QueryBalancesByAddressResponse": {
+      "type": "object",
+      "properties": {
+        "address": {
+          "type": "string",
+          "description": "address is the address of the voucher owner."
+        },
+        "total_amounts": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/chora.voucher.v1.QueryBalancesByAddressResponse.TotalAmount"
+          },
+          "description": "total_amounts is the list of total amounts."
+        },
+        "pagination": {
+          "$ref": "#/definitions/cosmos.base.query.v1beta1.PageResponse",
+          "description": "pagination is the pagination of the response."
+        }
+      },
+      "description": "QueryBalancesByAddressResponse is the Query/BalancesByAddress response type."
+    },
+    "chora.voucher.v1.QueryBalancesByAddressResponse.TotalAmount": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "uint64",
+          "description": "id is the unique identifier of the voucher."
+        },
+        "total_amount": {
+          "type": "string",
+          "description": "total_amount is the total amount the address owns."
+        }
+      },
+      "description": "TotalAmount is the total amount."
+    },
+    "chora.voucher.v1.QueryBalancesByVoucherResponse": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "uint64",
+          "description": "id is the unique identifier of the voucher."
+        },
+        "total_amounts": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/chora.voucher.v1.QueryBalancesByVoucherResponse.TotalAmount"
+          },
+          "description": "total_amounts is the list of total amounts."
+        },
+        "pagination": {
+          "$ref": "#/definitions/cosmos.base.query.v1beta1.PageResponse",
+          "description": "pagination is the pagination of the response."
+        }
+      },
+      "description": "QueryBalancesByVoucherResponse is the Query/BalancesByVoucher response type."
+    },
+    "chora.voucher.v1.QueryBalancesByVoucherResponse.TotalAmount": {
+      "type": "object",
+      "properties": {
+        "address": {
+          "type": "string",
+          "description": "address is the address of the voucher owner."
+        },
+        "total_amount": {
+          "type": "string",
+          "description": "total_amount is the total amount the address owns."
+        }
+      },
+      "description": "TotalAmount is the total amount."
+    },
     "chora.voucher.v1.QueryVoucherResponse": {
       "type": "object",
       "properties": {
